--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,29 +1,11 @@
-//plugins {
-//    id 'com.android.application'
-//    id 'kotlin-android'
-//    id 'kotlin-kapt'
-//    id 'kotlin-android-extensions'
-////    id 'org.jetbrains.kotlin.android'
-//}
-
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
-//apply plugin: 'com.android.application'
-//apply plugin: 'kotlin-android'
-//apply plugin: 'kotlin-kapt' // <- Add this line
-//apply plugin: 'io.fabric'
-
-//apply plugin: 'com.android.application'
-//apply plugin: 'kotlin-android'
-//apply plugin: 'kotlin-android-extensions'
-//apply plugin: 'kotlin-kapt'
-
 android {
     compileSdkVersion 32
-//    buildToolsVersion "26.0.3"
+
     defaultConfig {
         applicationId "com.example.marvel"
         minSdkVersion 21
@@ -56,7 +38,7 @@ kapt {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
 //    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
@@ -64,8 +46,12 @@ dependencies {
 //    androidTestImplementation 'com.android.support.test:runner:1.0.2'
 //    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    // Project modular
+    implementation (project(":domain"))
+
     //Dimen
     implementation 'com.intuit.sdp:sdp-android:1.0.5'
+    implementation project(path: ':data')
 
     //Glide
     def glideVersion = '4.0.0'
@@ -83,39 +69,46 @@ dependencies {
     kapt "android.arch.lifecycle:compiler:$architectureVersion"
 //    compile "com.android.support:cardview-v7:$supportLibraryVersion"
 
-    // Dagger
-//    implementation 'com.google.dagger:dagger:2.38.1'
-//    implementation 'com.google.dagger:dagger-android-support:2.11' // if you use the support libraries
-//    annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
-//    kapt 'com.google.dagger:dagger-compiler:2.11'
-//    kapt 'com.google.dagger:dagger-android-processor:2.15'R
-
-    // Dagger
-//    implementation 'com.google.dagger:dagger:2.38.1'
+//    // Dagger
+////    implementation 'com.google.dagger:dagger:2.38.1'
+////    implementation 'com.google.dagger:dagger-android-support:2.11' // if you use the support libraries
+////    annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
+////    kapt 'com.google.dagger:dagger-compiler:2.11'
+////    kapt 'com.google.dagger:dagger-android-processor:2.15'R
 //
-//    implementation 'com.google.dagger:dagger-android-support:2.24'
-//    annotationProcessor 'com.google.dagger:dagger-android-processor:2.24'
+//    // Dagger
+////    implementation 'com.google.dagger:dagger:2.38.1'
+////
+////    implementation 'com.google.dagger:dagger-android-support:2.24'
+////    annotationProcessor 'com.google.dagger:dagger-android-processor:2.24'
+////    kapt 'com.google.dagger:dagger-compiler:2.24'
+//
+////    // Dagger
+////    implementation 'com.google.dagger:dagger:2.38.1'
+////    annotationProcessor 'com.google.dagger:dagger-compiler:2.24'
+////
+////    implementation 'com.google.dagger:dagger-android:2.35.1'
+////    implementation 'com.google.dagger:dagger-android-support:2.24'
+////    annotationProcessor 'com.google.dagger:dagger-android-processor:2.24'
+//
+//    // Dagger
+//    implementation 'com.google.dagger:dagger-android:2.35.1'
+//    implementation 'com.google.dagger:dagger-android-support:2.24' // if you use the support libraries
+//    kapt 'com.google.dagger:dagger-android-processor:2.24'
 //    kapt 'com.google.dagger:dagger-compiler:2.24'
 
-    implementation 'com.google.dagger:dagger:2.38.1'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.24'
-
-    implementation 'com.google.dagger:dagger-android:2.35.1'
-    implementation 'com.google.dagger:dagger-android-support:2.24'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.24'
-
-    // Core
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
+//    // Core
+//    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+//    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
+//    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
     implementation "com.pascalwelsch.compositeandroid:activity:$supportLibraryVersion"
     implementation "com.pascalwelsch.compositeandroid:fragment:$supportLibraryVersion"
 
-    // Networking
-    def retrofitVersion = '2.9.0'
-    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-    implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+//    // Networking
+//    def retrofitVersion = '2.9.0'
+//    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+//    implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
+//    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
