--- a/data/build.gradle
+++ b/data/build.gradle
@@ -62,4 +62,14 @@ dependencies {
     implementation 'com.google.dagger:dagger-android-support:2.24' // if you use the support libraries
     kapt 'com.google.dagger:dagger-android-processor:2.24'
     kapt 'com.google.dagger:dagger-compiler:2.24'
+
+    // RxAndroid and RxJava
+    implementation 'io.reactivex:rxandroid:1.2.0'
+    implementation 'io.reactivex:rxjava:1.1.10'
+    implementation('com.jakewharton.rxbinding:rxbinding:0.3.0') {
+        exclude group: 'com.android.support'
+    }
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
 }
