--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -22,9 +22,9 @@ android {
 
 dependencies {
     // Core
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
+//    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+//    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
+//    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
 //    implementation 'com.pascalwelsch.compositeandroid:activity:28.0.0'
 //    implementation 'com.pascalwelsch.compositeandroid:fragment:28.0.0'
 }
