--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,17 +39,17 @@ kapt {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     // Project modular
-    implementation (project(":domain"))
+    implementation project(path: ":domain")
+    implementation project(path: ":data")
 
     //Dimen
     implementation 'com.intuit.sdp:sdp-android:1.0.5'
-    implementation project(path: ':data')
 
     //Glide
-    def glideVersion = '4.0.0'
+    def glideVersion = '4.11.0'
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
 
@@ -63,6 +63,9 @@ dependencies {
     kapt "android.arch.lifecycle:compiler:$architectureVersion"
 
     // Core
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
     implementation "com.pascalwelsch.compositeandroid:activity:$supportLibraryVersion"
     implementation "com.pascalwelsch.compositeandroid:fragment:$supportLibraryVersion"
 
@@ -71,4 +74,30 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    /* Dagger2 - We are going to use dagger.android which includes
+     * support for Activity and fragment injection so we need to include
+     * the following dependencies */
+    implementation 'com.google.dagger:dagger-android:2.35.1'
+    implementation 'com.google.dagger:dagger-android-support:2.24'
+    kapt 'com.google.dagger:dagger-android-processor:2.24'
+
+    /* Dagger2 - default dependency */
+    kapt 'com.google.dagger:dagger-compiler:2.24'
+
+    // RxAndroid and RxJava
+    implementation 'io.reactivex:rxandroid:1.2.0'
+    implementation 'io.reactivex:rxjava:1.1.10'
+    implementation('com.jakewharton.rxbinding:rxbinding:0.3.0') {
+        exclude group: 'com.android.support'
+    }
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'\
+
+    // MVP
+    def thirtyinchVersion = '0.8.0'
+    implementation "net.grandcentrix.thirtyinch:thirtyinch:$thirtyinchVersion"
+    implementation "net.grandcentrix.thirtyinch:thirtyinch-rx2:$thirtyinchVersion"
+    implementation "net.grandcentrix.thirtyinch:thirtyinch-plugin:$thirtyinchVersion"
 }
