--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
@@ -9,6 +9,7 @@ android {
     compileSdkVersion 32
 
     defaultConfig {
+//        applicationId "com.example.data"
         minSdk 21
         targetSdk 32
     }
@@ -28,7 +29,7 @@ kapt {
 
 dependencies {
     implementation project(path: ':domain')
-    implementation project(path: ':app')
+//    implementation project(path: ':app')
     // Networking
     def retrofitVersion = '2.9.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
