--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,12 +1,14 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'com.android.library'
+    id 'kotlin-android'
+//    id 'org.jetbrains.kotlin.android'
 }
 
 android {
     compileSdkVersion 32
 
     defaultConfig {
+//        applicationId "com.example.domain"
         minSdk 21
         targetSdk 32
     }
@@ -27,4 +29,18 @@ dependencies {
 //    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
 //    implementation 'com.pascalwelsch.compositeandroid:activity:28.0.0'
 //    implementation 'com.pascalwelsch.compositeandroid:fragment:28.0.0'
+
+    // MVP
+    def thirtyinchVersion = '0.8.0'
+    implementation "net.grandcentrix.thirtyinch:thirtyinch:$thirtyinchVersion"
+    implementation "net.grandcentrix.thirtyinch:thirtyinch-rx2:$thirtyinchVersion"
+    implementation "net.grandcentrix.thirtyinch:thirtyinch-plugin:$thirtyinchVersion"
+
+    // Core
+    def supportLibraryVersion = '25.4.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
+    implementation "com.pascalwelsch.compositeandroid:activity:$supportLibraryVersion"
+    implementation "com.pascalwelsch.compositeandroid:fragment:$supportLibraryVersion"
 }
