--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,18 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+            buildConfigField("String", "PUBLIC_KEY", "\"bd690936cd89c676c26c1692f3076045\"" )
+            buildConfigField("String", "PRIVATE_KEY", "\"baea5fa7ddcd567abaf406afdd09d81a4429eba8\"")
+            buildConfigField("String", "BASE_URL", "\"http://gateway.marvel.com/v1/public/\"")
+        }
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+            buildConfigField("String", "PUBLIC_KEY", "\"bd690936cd89c676c26c1692f3076045\"" )
+            buildConfigField("String", "PRIVATE_KEY", "\"baea5fa7ddcd567abaf406afdd09d81a4429eba8\"")
+            buildConfigField("String", "BASE_URL", "\"http://gateway.marvel.com/v1/public/\"")
         }
     }
     compileOptions {
@@ -93,7 +105,7 @@ dependencies {
     }
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'\
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0' \
 
     // MVP
     def thirtyinchVersion = '0.8.0'
