--- a/data/build.gradle
+++ b/data/build.gradle
@@ -14,6 +14,20 @@ android {
         targetSdk 32
     }
 
+    buildTypes {
+        debug {
+            buildConfigField("String", "PUBLIC_KEY", "\"bd690936cd89c676c26c1692f3076045\"" )
+            buildConfigField("String", "PRIVATE_KEY", "\"baea5fa7ddcd567abaf406afdd09d81a4429eba8\"")
+            buildConfigField("String", "BASE_URL", "\"http://gateway.marvel.com/v1/public/\"")
+        }
+
+        release {
+            buildConfigField("String", "PUBLIC_KEY", "\"bd690936cd89c676c26c1692f3076045\"" )
+            buildConfigField("String", "PRIVATE_KEY", "\"baea5fa7ddcd567abaf406afdd09d81a4429eba8\"")
+            buildConfigField("String", "BASE_URL", "\"http://gateway.marvel.com/v1/public/\"")
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -73,4 +87,6 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
+
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
