--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,8 @@ dependencies {
     def supportLibraryVersion = '28.0.0'
     def architectureVersion = '1.1.1'
     implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
+    implementation "com.android.support:cardview-v7:$supportLibraryVersion"
+//    implementation "com.android.support:recyclerview-v7:$supportLibraryVersion"
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation "android.arch.lifecycle:runtime:$architectureVersion"
     implementation "android.arch.lifecycle:extensions:$architectureVersion"
